<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MenuActivity">

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/mainLabel"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="32dp"
            android:layout_marginTop="32dp" android:layout_marginEnd="32dp" android:gravity="center"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/roadsLabel"
            app:layout_constraintTop_toBottomOf="@+id/mainLabel"
            android:layout_marginTop="48dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/divider"
            android:text="@string/roadsLabel" android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="16sp" android:gravity="center"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/ttriallabel"
            app:layout_constraintTop_toBottomOf="@+id/mainLabel"
            android:layout_marginTop="48dp"
            android:text="@string/tTrialLabel" android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintStart_toEndOf="@+id/divider" app:layout_constraintEnd_toEndOf="parent"
            android:textSize="16sp" android:gravity="center"/>
    <View
            android:id="@+id/divider"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/mainLabel"
            app:layout_constraintBottom_toBottomOf="parent" android:visibility="invisible"/>
    <Button
            android:text="@string/roadDiscovButton"
            android:layout_width="0dp"
            android:layout_height="64dp" android:id="@+id/roaddiscoverybutton"
            app:layout_constraintTop_toBottomOf="@+id/roadsLabel"
            android:layout_marginTop="32dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/divider" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" tools:ignore="DuplicateSpeakableTextCheck"/>
    <Button
            android:text="@string/ttriallistbutton"
            android:layout_width="0dp"
            android:layout_height="64dp" android:id="@+id/timetrialleaderboard"
            app:layout_constraintTop_toBottomOf="@+id/ttriallabel"
            tools:ignore="DuplicateSpeakableTextCheck"
            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintStart_toEndOf="@+id/divider"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="32dp" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>
    <Button
            android:text="@string/createttrial"
            android:layout_width="0dp"
            android:layout_height="64dp" android:id="@+id/createttrialbutton"
            app:layout_constraintTop_toBottomOf="@+id/timetrialleaderboard"
            tools:ignore="DuplicateSpeakableTextCheck"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toEndOf="@+id/divider"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" android:layout_marginTop="16dp"/>
    <Button
            android:text="@string/leaveGroup"
            android:layout_width="0dp"
            android:layout_height="64dp" android:id="@+id/leavegroupbutton"
            tools:ignore="DuplicateSpeakableTextCheck"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toEndOf="@+id/divider"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="24dp"/>
    <Button
            android:text="@string/speedDriveButton"
            android:layout_width="0dp"
            android:layout_height="64dp" android:id="@+id/drivemodebutton"
            app:layout_constraintTop_toBottomOf="@+id/roaddiscoverybutton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/divider" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" tools:ignore="DuplicateSpeakableTextCheck" android:layout_marginTop="16dp"/>
    <Button
            android:text="@string/switchtoKMH"
            android:layout_width="0dp"
            android:layout_height="64dp" android:id="@+id/switchUnits"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/divider" android:layout_marginStart="24dp"
            android:layout_marginEnd="8dp" tools:ignore="DuplicateSpeakableTextCheck"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="24dp"/>
    <TextView
            android:text="Logged in as Ewan from group UVic Car Club"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/usergrouplabel"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="32dp" app:layout_constraintBottom_toTopOf="@+id/leavegroupbutton"
            android:gravity="center" android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
</androidx.constraintlayout.widget.ConstraintLayout>