<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterActivity">
    <Button
            android:text="Read Database"
            android:layout_width="94dp"
            android:layout_height="48dp" android:id="@+id/testButton"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="-999dp" app:layout_constraintVertical_bias="0.0"
            app:layout_constraintHorizontal_bias="0.0" tools:ignore="HardcodedText"/>
    <TextView
            android:text="@string/welcomeBanner"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/mainBanner"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="32dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2" android:gravity="center"
            android:layout_marginStart="32dp" android:layout_marginEnd="32dp"/>
    <TextView
            android:text="@string/welcomeLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/loginStatus"
            app:layout_constraintTop_toBottomOf="@+id/mainBanner" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="24dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" android:gravity="center"/>
    <Button
            android:text="@string/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/registerButton"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/caseSensWarning" android:layout_marginTop="32dp"
            android:visibility="invisible" app:layout_constraintHorizontal_bias=".5"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/usernameInput"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginStatus" android:layout_marginTop="32dp"
            android:hint="@string/usernameBox" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            android:gravity="center" android:minHeight="48dp" android:autofillHints="AUTOFILL_HINT_PERSON_NAME_GIVEN"
            android:visibility="invisible"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/groupNameInput"
            app:layout_constraintTop_toBottomOf="@id/usernameInput"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" android:hint="@string/groupBox" android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" android:gravity="center" android:minHeight="48dp"
            android:importantForAutofill="no" android:visibility="invisible"/>
    <TextView
            android:text="@string/caseSensWarn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/caseSensWarning"
            app:layout_constraintStart_toStartOf="@+id/groupNameInput"
            app:layout_constraintTop_toBottomOf="@+id/groupNameInput"
            app:layout_constraintEnd_toEndOf="@+id/groupNameInput" app:layout_constraintHorizontal_bias="0.0"
            android:visibility="invisible"/>
</androidx.constraintlayout.widget.ConstraintLayout>