<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DriveModeActivity">
    <Switch
            android:text="@string/mapFollow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/mapFollowSwitch"
            app:layout_constraintStart_toStartOf="@+id/driveModeMap"
            app:layout_constraintTop_toTopOf="@+id/driveModeMap" android:minHeight="48dp"
            android:layout_marginStart="16dp"/>
    <org.osmdroid.views.MapView
            android:id="@+id/driveModeMap"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="24dp" android:layout_marginStart="24dp" android:layout_marginEnd="24dp"
            app:layout_constraintTop_toBottomOf="@+id/exitDModeButton" android:layout_marginTop="24dp"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0">
    </org.osmdroid.views.MapView>
    <TextView
            android:text="@string/waitForSvc"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/speedLabelDMode"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" android:layout_marginTop="24dp"
            app:layout_constraintHorizontal_bias="0.5"
            android:layout_marginStart="24dp" android:layout_marginEnd="24dp" android:gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/roadNameTimerDMode"/>
    <TextView
            android:text="@string/recordsThisSesh"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/newRecordsCheckpointsLeftLabel"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp" android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/roadNameTimerDMode" android:layout_marginTop="24dp"/>
    <TextView
            android:text="@string/loadingRoadName"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/roadNameTimerDMode"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp" android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/speedLabelDMode"
            app:layout_constraintBottom_toTopOf="@+id/newRecordsCheckpointsLeftLabel" android:layout_marginTop="24dp"/>
    <Button
            android:text="@string/exitDModeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/exitDModeButton"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newRecordsCheckpointsLeftLabel" android:layout_marginTop="24dp"/>
    <TextView
            android:text="@string/openstreetmap_contributors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/osmLabel"
            app:layout_constraintBottom_toBottomOf="@+id/driveModeMap"
            app:layout_constraintEnd_toEndOf="@+id/driveModeMap"
            app:layout_constraintStart_toStartOf="@+id/driveModeMap"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:gravity="center"
            android:layout_marginBottom="4dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
